@@ -8,7 +8,11 @@ bzr-builddeb (2.7.5) UNRELEASED; urgency=low
   * Use new set_commit_message() hook in bzr to set the commit
     message from debian/changelog and set fixed bugs in tags. LP: #707274
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 03 Jun 2011 15:36:10 +0100
+  [ Jelmer Vernooij ]
+  * Fix support for native packages with dashes in their version in
+    sources.list. LP: #796853
+
+ -- Jelmer Vernooij <jelmer@debian.org>  Mon, 13 Jun 2011 23:10:20 +0100
 
 bzr-builddeb (2.7.4) unstable; urgency=low
 
